# atsam4lc8c

./: .travis.yml  Cargo.toml  README.md  device.x  generate.sh  memory.x  run_blink.sh  start_openocd.sh
.cargo/: config
doc/: ATSAM4LC8C.svd  README.md
examples/: blink.rs  blink_delay_delay.rs  blink_delay_nop.rs  blink_delay_nop_clock.rs  blink_delay_semihosting.rs
src/: lib.rs
src/abdacb/: mod.rs
src/abdacb/cr/: mod.rs
src/abdacb/idr/: mod.rs
src/abdacb/ier/: mod.rs
src/abdacb/imr/: mod.rs
src/abdacb/parameter/: mod.rs
src/abdacb/scr/: mod.rs
src/abdacb/sdr0/: mod.rs
src/abdacb/sdr1/: mod.rs
src/abdacb/sr/: mod.rs
src/abdacb/vcr0/: mod.rs
src/abdacb/vcr1/: mod.rs
src/acifc/: mod.rs
src/acifc/conf/: mod.rs
src/acifc/confw/: mod.rs
src/acifc/ctrl/: mod.rs
src/acifc/icr/: mod.rs
src/acifc/idr/: mod.rs
src/acifc/ier/: mod.rs
src/acifc/imr/: mod.rs
src/adcife/: mod.rs
src/aesa/: mod.rs
src/ast/: mod.rs
src/bpm/: mod.rs
src/bscif/: mod.rs
src/catb/: mod.rs
src/chipid/: mod.rs
src/crccu/: mod.rs
src/dacc/: mod.rs
src/eic/: mod.rs
src/freqm/: mod.rs
src/gloc/: mod.rs
src/gpio/: mod.rs
src/hcache/: mod.rs
src/hflashc/: mod.rs
src/hmatrix/: mod.rs
src/iisc/: mod.rs
src/lcdca/: mod.rs
src/parc/: mod.rs
src/pdca/: mod.rs
src/pevc/: mod.rs
src/picouart/: mod.rs
src/pm/: mod.rs
src/scif/: mod.rs
src/smap/: mod.rs
src/spi/: mod.rs
src/tc0/: mod.rs
src/trng/: mod.rs
src/twim0/: mod.rs
src/twis0/: mod.rs
src/usart0/: mod.rs
src/usbc/: mod.rs
src/wdt/: mod.rs
(+679 files in other folders)
