[package]
name = "atsam4lc8c"
description = "Peripheral access API for Atmel ATSAM4LC8C microcontrollers"
version = "0.1.1"
authors = ["Joost Yervante Damad <joost@damad.be>"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "svd2rust"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustit-be/atsam4lc8c"
documentation = "https://docs.rs/atsam4lc8c"
categories = ["embedded", "hardware-support"]
exclude = [ "doc/*", "*.sh" ]

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.0"
vcell = "0.1"

[dependencies.cortex-m-rt]
optional = true
version = "0.5.0"

[dev-dependencies]
cortex-m-rt = "0.5.0"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.3.0"
cortex-m-log = { version = "0.2.0", features = ["semihosting"] }

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]

[badges]
travis-ci = { repository = "rustit-be/atsam4lc8c" }
